# engaging-large-scale-functional-programming

./: README.md  student_assistants.md
.github/workflows/: build_paper.yml  build_presentation_TFPIE2022.yml
paper/: Makefile  README.md  abstract.tex  engaging_fp_education.tex  eptcs.cls  lukas_related_work_notes.md  next_1200_haskell_programmers.tex  settings.tex  sources.bib
paper/sections/conclusion/: .conclusion.tex.swp  conclusion.tex
paper/sections/course_structure_conditions/: .course_structure.tex.swp  conditions.tex  course_structure_conditions.tex  syllabus.tex
paper/sections/cyp/: app_assoc.cprf  app_assoc.cthy  cyp.tex
paper/sections/exam/: exam.tex
paper/sections/introduction/: challenges.tex  introduction.tex  outline.tex
paper/sections/io_mocking/: P.hs  io_mocking.tex
paper/sections/lectures/: lectures.tex
paper/sections/practical_part/: engagement_mechanisms.tex  engagement_toolbox.tex  practical_part.tex  selected_exercises.tex  technical_setup.tex
paper/sections/practical_part/io_mocking/: U.hs  io_mocking.tex
paper/sections/related_work/: related_work.tex
paper/sections/selected_exercises/: selected_exercises.tex
paper/sections/syllabus/: syllabus.tex
presentation_LambdaDays/: .gitignore  Makefile  README.md  presentation_LambdaDays.tex
presentation_LambdaDays/assets/: README.md
presentation_TFPIE2022/: Makefile  README.md  presentation_TFPIE2022.tex
presentation_TFPIE2022/assets/: README.md
resources/: README.md
resources/contest/: .gitignore  README.md  app.py  problem.py  problems.yaml  requirements.txt  run.sh  scoreboard.py  scoreboard_manager.py  send_cmd.py  upload.php
resources/contest/static/: styles.css
resources/contest/templates/: index.html  problem0.html  problem1.html  problem2.html  problem3.html  problem4.html  problem5.html  problem6.html  problem7.html  scoreboard.html
resources/contest/uploads/ga96zun/: results.xml  timestamp
resources/contest/uploads/ran/: Exercise04.hs  commit  results.xml  timestamp
resources/cuboid/: README.md  run.sh  stack.yaml  test.cabal
resources/cuboid/solution/: solution.cabal
resources/cuboid/solution/src/: Exercise05.hs
resources/cuboid/template/: exercise.cabal
resources/cyp_integration/: README.md  test.cabal
resources/esperanto/: README.md  README.me  test.cabal
resources/esperanto/solution/: solution.cabal
resources/esperanto/template/: exercise.cabal
resources/esperanto/test/: Interface.hs  Test.hs
resources/game_tournament_framework/: README.md  run.sh  test.cabal
resources/game_tournament_framework/assignment/: exercise.cabal
resources/game_tournament_framework/backend/: .gitignore  upload.php
resources/game_tournament_framework/backend/tournament-runner/: .gitignore  cleanup.sh  cleanup_full.sh  competition-runner.cabal  run.sh  stack.yaml
resources/game_tournament_framework/backend/tournament-runner/src/Competition/: Competition.hs  ComputeParallel.hs  Config.hs  Logger.hs  MetadataWriter.hs  Stats.hs  SubmissionList.hs  SubmissionListGenerator.hs  Types.hs  Util.hs
resources/game_tournament_framework/backend/tournament-runner/src/Competition/Game/: Game.hs  StrategyWrapper.hs
resources/game_tournament_framework/backend/tournament-runner/src/Competition/Tournament/: Logger.hs  Tournament.hs
resources/game_tournament_framework/backend/tournament-runner/template/: exercise.cabal
resources/game_tournament_framework/solution/: solution.cabal
resources/game_tournament_framework/test/: Generators.hs  Interface.hs  Test.hs  Types.hs  Util.hs
resources/io_mocking/: README.md  test.cabal
resources/io_mocking/hello/: .gitignore  README.md  test.cabal
resources/io_mocking/solution/: solution.cabal
resources/io_mocking/stocks/: README.md  test.cabal
resources/io_mocking/test/: Interface.hs  Test.hs
resources/io_mocking/typeclass/: README.md  test.cabal
resources/io_mocking/typeclass/src/: Copy.hs
resources/io_mocking/typeclass/test/: Test.hs
resources/resolution/: README.md  run.sh  stack.yaml  test.cabal
resources/resolution/solution/: solution.cabal
resources/resolution/solution/src/: Exercise09.hs  Exercise09_Efficient.hs  Types.hs  Types_Efficient.hs
resources/resolution/template/: exercise.cabal
resources/resolution/template/src/: Exercise09.hs
resources/sat_solver/: README.md  test.cabal
resources/sat_solver/solution/: solution.cabal
resources/sat_solver/template/: exercise.cabal
resources/sat_solver/test/: Interface.hs  Test.hs
resources/spelling_correction/: .gitignore  README.md  test.cabal
resources/spelling_correction/solution/: solution.cabal
resources/spelling_correction/template/: exercise.cabal
resources/spelling_correction/test/: Interface.hs  Test.hs
resources/sudoku/: README.md  test.cabal
resources/sudoku/solution/: solution.cabal
resources/sudoku/template/: exercise.cabal
resources/sudoku/test/: Interface.hs  Sudokus.hs  Test.hs
resources/synthesiser/: README.md  test.cabal
resources/synthesiser/solution/: solution.cabal
resources/synthesiser/solution/src/: Effects.hs  Exercise06.hs
resources/synthesiser/template/: exercise.cabal
resources/synthesiser/template/src/lib/: Main.hs
resources/synthesiser/test/: Interface.hs  Test.hs
resources/turtle_graphics/: README.md  shell.nix  stack.yaml  test.cabal
resources/turtle_graphics/assignment/: exercise.cabal
resources/turtle_graphics/assignment/src/: Exercise10.hs  Turtle.hs
resources/turtle_graphics/mock/Mock/System/IO/: Internal.hs
resources/turtle_graphics/mock/System/: Random.hs
resources/turtle_graphics/solution/: solution.cabal
resources/turtle_graphics/solution/src/: Exercise10.hs
resources/turtle_graphics/template/: stack.yaml
resources/turtle_graphics/template/src/: Display.hs
resources/turtle_graphics/test/: Interface.hs  Test.hs
resources/uno/: .gitignore  README.md  test.cabal
resources/uno/solution/: solution.cabal
resources/uno/template/: exercise.cabal
resources/uno/template/src/: Types.hs
resources/uno/test/: Interface.hs  Strategy.hs  Test.hs
(+673 files in other folders)
