cabal-version: 2.2
name: test
version: 0.1
build-type: Simple

-- dependencies for all targets
common common-all
  default-language: Haskell2010
  build-depends:
    base == 4.*

-- dependencies for test targets
common common-tests
  import: common-all
  hs-source-dirs: test
  build-depends:
    tasty == 1.*,
    tasty-quickcheck == 0.*,
    QuickCheck == 2.*,
    mtl == 2.2.*,
    containers == 0.6.*
  ghc-options:
    -main-is Test

-- Build the submission in src/ 
library submission
  import: common-all
  -- enables safe Haskell mode; that is, disallow unsafe features -- see https://wiki.haskell.org/Safe_Haskell
  default-extensions: Safe
  -- The base package by Haskell can be trusted.
  -- See https://downloads.haskell.org/~ghc/latest/docs/html/users_guide/safe_haskell.html#package-trust
  -- for a description of the flags. Add more trusted packages if needed.
  -- `-pgmP nonExistentCPP` disables the pre-processor for security reasons
  -- by setting it to a non-existent program called `nonExistentCPP`. See
  -- https://downloads.haskell.org/~ghc/latest/docs/html/users_guide/phases.html
  ghc-options: -pgmP nonExistentCPP
  hs-source-dirs: src
  exposed-modules: Copy 

-- run tests for a submission
executable test
  import: common-tests
  build-depends: submission
  main-is: Test.hs
