cabal-version: 2.2
name: exercise
version: 0.1
build-type: Simple

common common-all
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    random,
    array

library
  import: common-all
  hs-source-dirs: src/
  exposed-modules: Exercise
  other-modules: GamePlay, InternalUtil, Types, Util
